// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot 1`] = `
<div
  className="button-style"
  data-testid="button"
>
  hi 
  save
</div>
`;

exports[`snapshot 2`] = `
<div
  className="button-style"
  data-testid="button"
>
  hi 
  click me please
</div>
`;
